tests/checker/diagnostics/0673_fcm_unpack_with_type_mismatch_02.ml.infer.expected
File "0673_fcm_unpack_with_type_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0673_fcm_unpack_with_type_mismatch_02 is not a valid module name.

File "0673_fcm_unpack_with_type_mismatch_02.ml", line 13, characters 27-38:
13 |   let module N_beta = (val packed_beta : Box_beta with type t = bool) in
                                ^^^^^^^^^^^
Error: The value packed_beta has type (module Box_beta)
       but an expression was expected of type
         (module Box_beta with type t = bool)
